--- a/css/sobre_nos.css
+++ b/css/sobre_nos.css
@@ -1,51 +1,3 @@
-/** Geral **/
-
-*{
-    color: #fff !important;
-}
-
-body{
-    background: rgb(249, 255, 185) !important;
-    height: 500px;
-}
-
-/** Navbar **/
-
-.navb{
-    margin-left: 0;
-    margin-right: 0;
-    height: 80px;
-}
-
-.nav-color{
-    color: #003589 !important;
-}
-
-.nav-position{
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.margin-nav{
-    margin: 6px 10px 0px 10px; 
-    padding: 0px !important;
-    width: fit-content;
-    vertical-align: middle !important;
-}
-
-.icon-title{
-    margin-left: 16px;
-    font-size: 1.5em !important;
-}
-
-.navbar-toggler{
-    background-color: #003589 !important;
-    padding: 2px 5px !important;
-    margin: 5px !important;
-}
-
-
 /** Body **/
 
 main{
@@ -80,8 +32,10 @@ p{
 }
 
 .parte2 img{
-    width: 400px;
-    height: 225px;
+    width: 300px;
+    height: 300px;
+    background-color: #fff;
+    border-radius: 500px;
 }
 
 .videoparagrafo{
