--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+html{
+    overflow-x: hidden;
+}
+
 *{
     color: #fff !important;
 }
@@ -42,7 +46,7 @@ body{
 }
 
 .container-index{
-    height: 500px;
+    height: 420px;
     background-color: #003589;
 }
 
@@ -71,14 +75,6 @@ body{
     margin: 180px 200px 50px 0;
     position: fixed;
 }
-
-.container {
-    margin-top: 20px !important;
-    position: relative;
-    padding: 15px;
-    max-width: 640px;
-    margin: 0 auto;
-  }
   
 .title-main{
     font-size: 2em;
@@ -86,6 +82,15 @@ body{
     text-align: center;
     line-height: 40px;
 }
+
+.container {
+    box-sizing: border-box;
+    margin-top: 20px !important;
+    position: relative;
+    padding: 30px;
+    max-width: 640px;
+    margin: 0 auto;
+ }
 
 .gallery-wrapper {
     overflow-x: auto;
