--- a/css/fale_conosco.css
+++ b/css/fale_conosco.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap');
+*{
+    font-family: 'Ubuntu' !important;
+}
 
-body{
-    background-color: #fff3b0;
-    width: 100%;
+.body-form{
+    background-color: #003589;
 }
 
 h1{
+    margin-top: 50px !important;
     font-family: 'Rubik';
     text-align: center;
     color: #fff;
@@ -43,10 +45,15 @@ h4{
 .divP{
     margin: 80px 50px 100px 50px;
     display: flex;
+    background-color: #EBD78D;
+    width: 95% !important;
+    margin-bottom: 135px !important;
 }
 
 form{
     margin: 0 !important;
+    margin-left: 60px !important;
+    margin-top: 20px !important;
 }
 
 .formulario label{
@@ -61,19 +68,19 @@ form{
 }
 
 .divEsquerda .arroba {
-    color: black !important;
+    color: #000 !important;
     border: none;
     border-radius: 5px;
     box-shadow: 1px 6px 6px #0000001c !important;
 }
 
 .divEsquerda select{
-    color: gray !important;
+    color: black !important;
     border: none;
     border-radius: 5px;
     box-shadow: 1px 6px 6px #0000001c !important;
 }
-
+    
 .divEsquerda .state{
     color: black !important;
 }
@@ -86,15 +93,11 @@ form{
 
 .divEsquerda label{
     font-weight: 600;
-    color: #000000c0 !important;
+    color: black !important;
 }
 
-.divEsquerda input::placeholder {
-    color: #000000be !important;
-}
-
-.sexo{
-    padding: 0;
+.divEsquerda input {
+    color: black !important;
 }
 
 .botao{
@@ -103,12 +106,16 @@ form{
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    background-color: #003589;
-    color: #fff;
+    background-color: #fff;
+    color: #000 !important;
     padding: 5px;
     font-size: 1.5em;
 }
 
 .divEsquerda input::placeholder{
     color: gray !important;
+}
+
+.btn-send{
+    margin-top: -40px !important;
 }
