--- a/css/index.css
+++ b/css/index.css
@@ -5,35 +5,38 @@
     font-family: 'Ubuntu';
 }
 
-body{
-    background: #dfa24e !important;
-}
-
 .menu ul li{
     font-size: 16px;
 }
 .container-index{
-    height: 420px;
     background-color: #003589;
+    height: 510px;
+}
+
+.container-projects-index{
+    position: relative;
+    margin-top: -100px;
+    background-color: #82a6df;
+    height: 510px;
 }
 
 .container-fluid{
     padding: 0px !important;
 }
 
-.h1-index{
-    font-size: 40px;
-    width: 800px;
-    padding-top: 20px;
-    margin: 0 !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
+.h2-index{
+    font-size: 48px !important;
+}
+
+.h5-index{
+    font-size: 24px;
+    text-align: justify;
 }
 
 .box-img img{
     width: 300px;
     height: 300px;
-    background-color: #fff;
+    background-color: #fff !important;
     border-radius: 500px;
 }
 
@@ -48,6 +51,7 @@ body{
     margin-top: auto;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: auto;
 }
 
 .centralizarImg
@@ -55,6 +59,7 @@ body{
     margin-top: auto;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: auto;
 }
 
 
@@ -63,9 +68,22 @@ body{
 }
 
 @media screen and (max-width: 800px) {
+
+    .container-index{
+        width: 100% !important;
+    }
+
+    .h2-index{
+        font-size: 30px !important;
+    }
+
+    .h5-index{
+        font-size: 20px !important;
+    }
+
    .centralizarImg{
      margin: 0;
-     padding: 0;
+     padding: 0;    
      margin-top: auto;
      margin-bottom: auto;
     }   
@@ -83,20 +101,6 @@ body{
         width: 200px !important;
         margin-right: 0;
     }   
-    .inicio{
-        width: 300px !important;
-        margin: 0;
-    }
-
-    .arrow-left, .arrow-right{
-        width: 20px !important;
-        line-height: 100px !important;
-        right: 340px !important;
-    }
-
-    .arrow-right{
-        left: 340px !important;
-    }
 
     .gallery-wrapper {
         margin: 0 5px !important;
@@ -113,15 +117,16 @@ body{
 }
 
 .title-main{
-    font-size: 2em;
-    margin-top: 40px !important;
-    text-align: center;
-    line-height: 40px;
+    color: black !important;
+    font-size: 2em !important;
+    text-align: center !important;
+    top: 50px !important;
+    position: relative !important;
 }
 
 .container {
     box-sizing: border-box;
-    margin-top: 40px !important;
+    margin-top: 100px !important;
     position: relative;
     padding: 30px;
     max-width: 640px;
@@ -143,7 +148,7 @@ body{
     font-size: 40px;
     line-height: 250px;
     width: 40px;
-    color: #F4F0E9 !important;
+    color: black !important;
     transition: all 600ms ease-in-out;
     background: linear-gradient(to left, transparent 0%, black 900%);
     opacity: 1;
@@ -198,6 +203,7 @@ body{
 
 .footer-custom{
     background-color: #fff !important;
+    margin-top: -100px;
 }
 
 .color-custom{
